--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,4 @@
 [submodule "libraries/io6Library"]
 	path = libraries/io6Library
 	url = https://github.com/Wiznet/io6Library.git
+	branch = main-patched
