Added BSERIES_EN to gate bseries-dependant function calls. Changed PIN_CS to WIZNET_CS_PIN; Reorganize VS Code extension recommendations and update Wiznet-related code for B-Series compatibility

--- a/port/CMakeLists.txt
+++ b/port/CMakeLists.txt
@@ -18,7 +18,8 @@ target_link_libraries(IOLIBRARY_FILES PRIVATE
         hardware_spi
         hardware_dma
         hardware_clocks
-        NC_SRC          # Uncommented after successful build
+        $<$<BOOL:${BSERIES_EN}>:NC_SRC>  # Only link NC_SRC when enabled
+                        # Uncommented after successful build
                         # Needed for B-Series_Template
         )
 
